// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionField > renders a audio media question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutFull"
  >
    <div
      class="label"
    />
    <div
      class="content"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="playerWrapper"
            >
              <div
                data-testid="mock-player"
              >
                Mock Player
              </div>
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash "
                  data-icon="trash"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M135.2 17.7L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-7.2-14.3C307.4 6.8 296.3 0 284.2 0L163.8 0c-12.1 0-23.2 6.8-28.6 17.7zM416 128L32 128 53.2 467c1.6 25.3 22.6 45 47.9 45l245.8 0c25.3 0 46.3-19.7 47.9-45L416 128z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
            >
              <button
                data-testid="test-add-media-button-button"
                id="add-media-button"
                name="add-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet "
                  data-icon="retweet"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M272 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-112 0c-17.7 0-32-14.3-32-32l0-128 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l32 0 0 128c0 53 43 96 96 96l112 0zM304 96c-17.7 0-32 14.3-32 32s14.3 32 32 32l112 0c17.7 0 32 14.3 32 32l0 128-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8l-32 0 0-128c0-53-43-96-96-96L304 96z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Media Type
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-media-type-select-select"
            id="media-type-select"
            name="media-type-select"
          >
            <option
              value="none"
            >
              None
            </option>
            <option
              value="IMAGE"
            >
              Image
            </option>
            <option
              value="AUDIO"
            >
              Audio
            </option>
            <option
              value="VIDEO"
            >
              Video
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Media URL
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="textFieldInputContainer textFieldInputKindPrimary"
        >
          <input
            class="textfield"
            data-testid="test-media-url-textfield-textfield"
            id="media-url-textfield"
            name="media-url-textfield"
            placeholder="URL"
            type="text"
            value="https://example.com/music.mp3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a duration question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Time Limit
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-duration-select-select"
            id="duration-select"
            name="duration-select"
          >
            <option
              value="5"
            >
              5 seconds
            </option>
            <option
              value="30"
            >
              30 seconds
            </option>
            <option
              value="60"
            >
              1 minute
            </option>
            <option
              value="120"
            >
              2 minutes
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a image media question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutFull"
  >
    <div
      class="label"
    />
    <div
      class="content"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="container"
            >
              <img
                class="image"
                src="https://example.com/image.png"
              />
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash "
                  data-icon="trash"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M135.2 17.7L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-7.2-14.3C307.4 6.8 296.3 0 284.2 0L163.8 0c-12.1 0-23.2 6.8-28.6 17.7zM416 128L32 128 53.2 467c1.6 25.3 22.6 45 47.9 45l245.8 0c25.3 0 46.3-19.7 47.9-45L416 128z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
            >
              <button
                data-testid="test-add-media-button-button"
                id="add-media-button"
                name="add-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet "
                  data-icon="retweet"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M272 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-112 0c-17.7 0-32-14.3-32-32l0-128 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l32 0 0 128c0 53 43 96 96 96l112 0zM304 96c-17.7 0-32 14.3-32 32s14.3 32 32 32l112 0c17.7 0 32 14.3 32 32l0 128-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8l-32 0 0-128c0-53-43-96-96-96L304 96z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Media Type
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-media-type-select-select"
            id="media-type-select"
            name="media-type-select"
          >
            <option
              value="none"
            >
              None
            </option>
            <option
              value="IMAGE"
            >
              Image
            </option>
            <option
              value="AUDIO"
            >
              Audio
            </option>
            <option
              value="VIDEO"
            >
              Video
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Media URL
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="textFieldInputContainer textFieldInputKindPrimary"
        >
          <input
            class="textfield"
            data-testid="test-media-url-textfield-textfield"
            id="media-url-textfield"
            name="media-url-textfield"
            placeholder="URL"
            type="text"
            value="https://example.com/image.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a multiple choice options question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutFull"
  >
    <div
      class="label"
    >
      <span>
        Options
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="optionsContainer"
      >
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-multi-choice-option-0-textfield-textfield"
                id="multi-choice-option-0-textfield"
                name="multi-choice-option-0-textfield"
                placeholder="Option 1"
                type="text"
                value="Stockholm"
              />
              <label
                class="checkboxLabel"
                for="multi-choice-option-0-textfield-checkbox"
              >
                <input
                  checked=""
                  class="checkbox"
                  id="multi-choice-option-0-textfield-checkbox"
                  type="checkbox"
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-check "
                    data-icon="check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-multi-choice-option-1-textfield-textfield"
                id="multi-choice-option-1-textfield"
                name="multi-choice-option-1-textfield"
                placeholder="Option 2"
                type="text"
                value="Paris"
              />
              <label
                class="checkboxLabel"
                for="multi-choice-option-1-textfield-checkbox"
              >
                <input
                  class="checkbox"
                  id="multi-choice-option-1-textfield-checkbox"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-multi-choice-option-2-textfield-textfield"
                id="multi-choice-option-2-textfield"
                name="multi-choice-option-2-textfield"
                placeholder="Option 3"
                type="text"
                value="Copenhagen"
              />
              <label
                class="checkboxLabel"
                for="multi-choice-option-2-textfield-checkbox"
              >
                <input
                  class="checkbox"
                  id="multi-choice-option-2-textfield-checkbox"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-multi-choice-option-3-textfield-textfield"
                id="multi-choice-option-3-textfield"
                name="multi-choice-option-3-textfield"
                placeholder="Option 4"
                type="text"
                value="London"
              />
              <label
                class="checkboxLabel"
                for="multi-choice-option-3-textfield-checkbox"
              >
                <input
                  class="checkbox"
                  id="multi-choice-option-3-textfield-checkbox"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-multi-choice-option-4-textfield-textfield"
                id="multi-choice-option-4-textfield"
                name="multi-choice-option-4-textfield"
                placeholder="Option 5"
                type="text"
                value="Oslo"
              />
              <label
                class="checkboxLabel"
                for="multi-choice-option-4-textfield-checkbox"
              >
                <input
                  class="checkbox"
                  id="multi-choice-option-4-textfield-checkbox"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-multi-choice-option-5-textfield-textfield"
                id="multi-choice-option-5-textfield"
                name="multi-choice-option-5-textfield"
                placeholder="Option 6"
                type="text"
                value="Berlin"
              />
              <label
                class="checkboxLabel"
                for="multi-choice-option-5-textfield-checkbox"
              >
                <input
                  class="checkbox"
                  id="multi-choice-option-5-textfield-checkbox"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a multiple choice type question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Type
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multi Choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or False
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type Answer
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a points question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Points
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-points-select-select"
            id="points-select"
            name="points-select"
          >
            <option
              value="0"
            >
              Zero Points
            </option>
            <option
              value="1000"
            >
              Standard Points (1000)
            </option>
            <option
              value="2000"
            >
              Double Points (2000)
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a question text question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutFull"
  >
    <div
      class="label"
    >
      <span>
        Question
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="textFieldInputContainer textFieldInputKindPrimary"
        >
          <input
            class="textfield"
            data-testid="test-question-text-textfield-textfield"
            id="question-text-textfield"
            maxlength="120"
            minlength="3"
            name="question-text-textfield"
            placeholder="Question"
            type="text"
            value="Who painted The Starry Night?"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range correct question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Correct
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="textFieldInputContainer textFieldInputKindPrimary"
        >
          <input
            class="textfield"
            data-testid="test-range-correct-textfield-textfield"
            id="range-correct-textfield"
            max="100"
            min="0"
            name="range-correct-textfield"
            placeholder=""
            type="number"
            value="50"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range margin question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Margin
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-range-margin-select-select"
            id="range-margin-select"
            name="range-margin-select"
          >
            <option
              value="NONE"
            >
              None
            </option>
            <option
              value="LOW"
            >
              Low
            </option>
            <option
              value="MEDIUM"
            >
              Medium
            </option>
            <option
              value="HIGH"
            >
              High
            </option>
            <option
              value="MAXIMUM"
            >
              Maximum
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range max question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Max
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="textFieldInputContainer textFieldInputKindPrimary"
        >
          <input
            class="textfield"
            data-testid="test-range-max-textfield-textfield"
            id="range-max-textfield"
            name="range-max-textfield"
            placeholder="Max"
            type="number"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range min question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Min
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="textFieldInputContainer textFieldInputKindPrimary"
        >
          <input
            class="textfield"
            data-testid="test-range-min-textfield-textfield"
            id="range-min-textfield"
            name="range-min-textfield"
            placeholder="Min"
            type="number"
            value="0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a range type question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Type
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multi Choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or False
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type Answer
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a true or false options question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutFull"
  >
    <div
      class="label"
    >
      <span>
        Options
      </span>
    </div>
    <div
      class="content optionsContainer"
    >
      <div
        class="optionsContainer"
      >
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-true-false-option-0-textfield-textfield"
                id="true-false-option-0-textfield"
                name="true-false-option-0-textfield"
                readonly=""
                type="text"
                value="True"
              />
              <label
                class="checkboxLabel"
                for="true-false-option-0-textfield-checkbox"
              >
                <input
                  checked=""
                  class="checkbox"
                  id="true-false-option-0-textfield-checkbox"
                  type="checkbox"
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-check "
                    data-icon="check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-true-false-option-1-textfield-textfield"
                id="true-false-option-1-textfield"
                name="true-false-option-1-textfield"
                readonly=""
                type="text"
                value="False"
              />
              <label
                class="checkboxLabel"
                for="true-false-option-1-textfield-checkbox"
              >
                <input
                  class="checkbox"
                  id="true-false-option-1-textfield-checkbox"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a true or false question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Type
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multi Choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or False
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type Answer
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a type answer options question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutFull"
  >
    <div
      class="label"
    >
      <span>
        Options
      </span>
      <button
        class="iconTooltipButton"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="content optionsContainer"
    >
      <div
        class="optionsContainer"
      >
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-type-answer-option-0-textfield-textfield"
                id="type-answer-option-0-textfield"
                name="type-answer-option-0-textfield"
                placeholder="Option 1"
                type="text"
                value="first"
              />
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-type-answer-option-1-textfield-textfield"
                id="type-answer-option-1-textfield"
                name="type-answer-option-1-textfield"
                placeholder="Option 2"
                type="text"
                value="second"
              />
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-type-answer-option-2-textfield-textfield"
                id="type-answer-option-2-textfield"
                name="type-answer-option-2-textfield"
                placeholder="Option 3"
                type="text"
                value="third"
              />
            </div>
          </div>
        </div>
        <div
          class="option"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-type-answer-option-3-textfield-textfield"
                id="type-answer-option-3-textfield"
                name="type-answer-option-3-textfield"
                placeholder="Option 4"
                type="text"
                value="fourth"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a type answer question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Type
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-question-type-select-select"
            id="question-type-select"
            name="question-type-select"
          >
            <option
              value="MULTI_CHOICE"
            >
              Multi Choice
            </option>
            <option
              value="RANGE"
            >
              Range
            </option>
            <option
              value="TRUE_FALSE"
            >
              True or False
            </option>
            <option
              value="TYPE_ANSWER"
            >
              Type Answer
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionField > renders a video media question field 1`] = `
<div>
  <div
    class="questionFieldContainer layoutFull"
  >
    <div
      class="label"
    />
    <div
      class="content"
    >
      <div
        class="mediaQuestionField"
      >
        <div
          class="previewWrapper"
        >
          <div
            class="preview"
          >
            <div
              class="playerWrapper"
            >
              <div
                data-testid="mock-player"
              >
                Mock Player
              </div>
            </div>
          </div>
          <div
            class="actions"
          >
            <div
              class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
            >
              <button
                data-testid="test-delete-media-button-button"
                id="delete-media-button"
                name="delete-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash "
                  data-icon="trash"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M135.2 17.7L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-7.2-14.3C307.4 6.8 296.3 0 284.2 0L163.8 0c-12.1 0-23.2 6.8-28.6 17.7zM416 128L32 128 53.2 467c1.6 25.3 22.6 45 47.9 45l245.8 0c25.3 0 46.3-19.7 47.9-45L416 128z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Delete
                </span>
              </button>
            </div>
            <div
              class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
            >
              <button
                data-testid="test-add-media-button-button"
                id="add-media-button"
                name="add-media-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-retweet "
                  data-icon="retweet"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M272 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-112 0c-17.7 0-32-14.3-32-32l0-128 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l32 0 0 128c0 53 43 96 96 96l112 0zM304 96c-17.7 0-32 14.3-32 32s14.3 32 32 32l112 0c17.7 0 32 14.3 32 32l0 128-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8l-32 0 0-128c0-53-43-96-96-96L304 96z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Replace
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Media Type
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="selectInputContainer selectInputKindPrimary"
        >
          <select
            data-testid="test-media-type-select-select"
            id="media-type-select"
            name="media-type-select"
          >
            <option
              value="none"
            >
              None
            </option>
            <option
              value="IMAGE"
            >
              Image
            </option>
            <option
              value="AUDIO"
            >
              Audio
            </option>
            <option
              value="VIDEO"
            >
              Video
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="questionFieldContainer layoutHalf"
  >
    <div
      class="label"
    >
      <span>
        Media URL
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="inputContainer"
      >
        <div
          class="textFieldInputContainer textFieldInputKindPrimary"
        >
          <input
            class="textfield"
            data-testid="test-media-url-textfield-textfield"
            id="media-url-textfield"
            name="media-url-textfield"
            placeholder="URL"
            type="text"
            value="https://example.com/video.mp4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
